src/main/java/parser/javaParser.java
// Generated from C:/Users/matth/IdeaProjects/JavaParser/src/main\java.g4 by ANTLR 4.9.1
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class javaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, INT=6, BOOLEAN=7, CHAR=8, FLOAT=9, 
		VOID=10, CLASS=11, PUBLIC=12, PRIVATE=13, STATIC=14, FINAL=15, DO=16, 
		WHILE=17, IF=18, ELSE=19, FOR=20, THIS=21, SEMICOLON=22, DOT=23, QUOTATIONMARK=24, 
		ASSIGN=25, EQUALS=26, GREATER=27, LESS=28, GREATAEREQUALS=29, LESSEQUALS=30, 
		ADD=31, SUBSTRACT=32, MULTYPLY=33, DIVIDE=34, MOD=35, BITWISEAND=36, BITWISEOR=37, 
		BITWISEXOR=38, SHIFTLEFT=39, SHIFTRIGHT=40, USHIFTRIGHT=41, AND=42, OR=43, 
		ASSINGNGREATER=44, ASSINGNLESS=45, ASSINGNGREATAEREQUALS=46, ASSINGNLESSEQUALS=47, 
		ASSINGNADD=48, ASSINGNSUBSTRACT=49, ASSINGNMULTYPLY=50, ASSINGNDIVIDE=51, 
		ASSINGNMOD=52, ASSINGNBITWISEAND=53, ASSINGNBITWISEOR=54, ASSINGNBITWISEXOR=55, 
		RETURN=56, INCREMENT=57, DECREMENT=58, IntegerLiteral=59, StringLiteral=60, 
		CharLiteral=61, FloatLiteral=62, NullLiteral=63, BooleanLiteral=64, Identifyer=65, 
		CustomType=66, WS=67;
	public static final int
		RULE_type = 0, RULE_literal = 1, RULE_binaryOperator = 2, RULE_unaryOperator = 3, 
		RULE_file = 4, RULE_jClass = 5, RULE_attributeOrMethod = 6, RULE_attribute = 7, 
		RULE_statment = 8, RULE_block = 9, RULE_varDecl = 10, RULE_assinage = 11, 
		RULE_forLoop = 12, RULE_whileLoop = 13, RULE_elseIfStatment = 14, RULE_elseStatment = 15, 
		RULE_expression = 16, RULE_method = 17, RULE_parameter = 18, RULE_modifyer = 19, 
		RULE_metodType = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"type", "literal", "binaryOperator", "unaryOperator", "file", "jClass", 
			"attributeOrMethod", "attribute", "statment", "block", "varDecl", "assinage", 
			"forLoop", "whileLoop", "elseIfStatment", "elseStatment", "expression", 
			"method", "parameter", "modifyer", "metodType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "'('", "')'", "','", "'int'", "'boolean'", "'char'", 
			"'float'", "'void'", "'class'", "'public'", "'private'", "'static'", 
			"'final'", "'do'", "'while'", "'if'", "'else'", "'for'", "'this'", "';'", 
			"'.'", "'\"'", "'='", "'=='", "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'&'", "'|'", "'^'", "'<<'", "'>>'", "'>>>'", "'&&'", 
			"'||'", null, null, null, null, null, null, null, null, null, null, null, 
			null, "'return'", "'++'", "'--'", null, null, null, null, "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "INT", "BOOLEAN", "CHAR", "FLOAT", 
			"VOID", "CLASS", "PUBLIC", "PRIVATE", "STATIC", "FINAL", "DO", "WHILE", 
			"IF", "ELSE", "FOR", "THIS", "SEMICOLON", "DOT", "QUOTATIONMARK", "ASSIGN", 
			"EQUALS", "GREATER", "LESS", "GREATAEREQUALS", "LESSEQUALS", "ADD", "SUBSTRACT", 
			"MULTYPLY", "DIVIDE", "MOD", "BITWISEAND", "BITWISEOR", "BITWISEXOR", 
			"SHIFTLEFT", "SHIFTRIGHT", "USHIFTRIGHT", "AND", "OR", "ASSINGNGREATER", 
			"ASSINGNLESS", "ASSINGNGREATAEREQUALS", "ASSINGNLESSEQUALS", "ASSINGNADD", 
			"ASSINGNSUBSTRACT", "ASSINGNMULTYPLY", "ASSINGNDIVIDE", "ASSINGNMOD", 
			"ASSINGNBITWISEAND", "ASSINGNBITWISEOR", "ASSINGNBITWISEXOR", "RETURN", 
			"INCREMENT", "DECREMENT", "IntegerLiteral", "StringLiteral", "CharLiteral", 
			"FloatLiteral", "NullLiteral", "BooleanLiteral", "Identifyer", "CustomType", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public javaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(javaParser.INT, 0); }
		public TerminalNode BOOLEAN() { return getToken(javaParser.BOOLEAN, 0); }
		public TerminalNode FLOAT() { return getToken(javaParser.FLOAT, 0); }
		public TerminalNode CHAR() { return getToken(javaParser.CHAR, 0); }
		public TerminalNode CustomType() { return getToken(javaParser.CustomType, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof javaVisitor ) return ((javaVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			_la = _input.LA(1);
			if ( !(((((_la - 6)) & ~0x3f) == 0 && ((1L << (_la - 6)) & ((1L << (INT - 6)) | (1L << (BOOLEAN - 6)) | (1L << (CHAR - 6)) | (1L << (FLOAT - 6)) | (1L << (CustomType - 6)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode IntegerLiteral() { return getToken(javaParser.IntegerLiteral, 0); }
		public TerminalNode FloatLiteral() { return getToken(javaParser.FloatLiteral, 0); }
		public TerminalNode CharLiteral() { return getToken(javaParser.CharLiteral, 0); }
		public TerminalNode BooleanLiteral() { return getToken(javaParser.BooleanLiteral, 0); }
		public TerminalNode NullLiteral() { return getToken(javaParser.NullLiteral, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).exitLiteral(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof javaVisitor ) return ((javaVisitor<? extends T>)visitor).visitLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			_la = _input.LA(1);
			if ( !(((((_la - 59)) & ~0x3f) == 0 && ((1L << (_la - 59)) & ((1L << (IntegerLiteral - 59)) | (1L << (CharLiteral - 59)) | (1L << (FloatLiteral - 59)) | (1L << (NullLiteral - 59)) | (1L << (BooleanLiteral - 59)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinaryOperatorContext extends ParserRuleContext {
		public TerminalNode ADD() { return getToken(javaParser.ADD, 0); }
		public TerminalNode SUBSTRACT() { return getToken(javaParser.SUBSTRACT, 0); }
		public TerminalNode MULTYPLY() { return getToken(javaParser.MULTYPLY, 0); }
		public TerminalNode DIVIDE() { return getToken(javaParser.DIVIDE, 0); }
		public TerminalNode EQUALS() { return getToken(javaParser.EQUALS, 0); }
		public TerminalNode GREATER() { return getToken(javaParser.GREATER, 0); }
		public TerminalNode LESS() { return getToken(javaParser.LESS, 0); }
		public TerminalNode GREATAEREQUALS() { return getToken(javaParser.GREATAEREQUALS, 0); }
		public TerminalNode LESSEQUALS() { return getToken(javaParser.LESSEQUALS, 0); }
		public TerminalNode AND() { return getToken(javaParser.AND, 0); }
		public TerminalNode OR() { return getToken(javaParser.OR, 0); }
		public TerminalNode MOD() { return getToken(javaParser.MOD, 0); }
		public TerminalNode BITWISEAND() { return getToken(javaParser.BITWISEAND, 0); }
		public TerminalNode BITWISEOR() { return getToken(javaParser.BITWISEOR, 0); }
		public TerminalNode BITWISEXOR() { return getToken(javaParser.BITWISEXOR, 0); }
		public TerminalNode SHIFTLEFT() { return getToken(javaParser.SHIFTLEFT, 0); }
		public TerminalNode SHIFTRIGHT() { return getToken(javaParser.SHIFTRIGHT, 0); }
		public TerminalNode USHIFTRIGHT() { return getToken(javaParser.USHIFTRIGHT, 0); }
		public BinaryOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binaryOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).enterBinaryOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).exitBinaryOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof javaVisitor ) return ((javaVisitor<? extends T>)visitor).visitBinaryOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BinaryOperatorContext binaryOperator() throws RecognitionException {
		BinaryOperatorContext _localctx = new BinaryOperatorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_binaryOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQUALS) | (1L << GREATER) | (1L << LESS) | (1L << GREATAEREQUALS) | (1L << LESSEQUALS) | (1L << ADD) | (1L << SUBSTRACT) | (1L << MULTYPLY) | (1L << DIVIDE) | (1L << MOD) | (1L << BITWISEAND) | (1L << BITWISEOR) | (1L << BITWISEXOR) | (1L << SHIFTLEFT) | (1L << SHIFTRIGHT) | (1L << USHIFTRIGHT) | (1L << AND) | (1L << OR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnaryOperatorContext extends ParserRuleContext {
		public TerminalNode INCREMENT() { return getToken(javaParser.INCREMENT, 0); }
		public TerminalNode DECREMENT() { return getToken(javaParser.DECREMENT, 0); }
		public TerminalNode ADD() { return getToken(javaParser.ADD, 0); }
		public TerminalNode SUBSTRACT() { return getToken(javaParser.SUBSTRACT, 0); }
		public UnaryOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unaryOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).enterUnaryOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).exitUnaryOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof javaVisitor ) return ((javaVisitor<? extends T>)visitor).visitUnaryOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnaryOperatorContext unaryOperator() throws RecognitionException {
		UnaryOperatorContext _localctx = new UnaryOperatorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_unaryOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADD) | (1L << SUBSTRACT) | (1L << INCREMENT) | (1L << DECREMENT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(javaParser.EOF, 0); }
		public List<JClassContext> jClass() {
			return getRuleContexts(JClassContext.class);
		}
		public JClassContext jClass(int i) {
			return getRuleContext(JClassContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof javaVisitor ) return ((javaVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(50);
				jClass();
				}
				}
				setState(53); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << PUBLIC) | (1L << PRIVATE) | (1L << STATIC))) != 0) );
			setState(55);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JClassContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(javaParser.CLASS, 0); }
		public TerminalNode Identifyer() { return getToken(javaParser.Identifyer, 0); }
		public ModifyerContext modifyer() {
			return getRuleContext(ModifyerContext.class,0);
		}
		public List<AttributeOrMethodContext> attributeOrMethod() {
			return getRuleContexts(AttributeOrMethodContext.class);
		}
		public AttributeOrMethodContext attributeOrMethod(int i) {
			return getRuleContext(AttributeOrMethodContext.class,i);
		}
		public JClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).enterJClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).exitJClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof javaVisitor ) return ((javaVisitor<? extends T>)visitor).visitJClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JClassContext jClass() throws RecognitionException {
		JClassContext _localctx = new JClassContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_jClass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIVATE) | (1L << STATIC))) != 0)) {
				{
				setState(57);
				modifyer();
				}
			}

			setState(60);
			match(CLASS);
			setState(61);
			match(Identifyer);
			setState(62);
			match(T__0);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 6)) & ~0x3f) == 0 && ((1L << (_la - 6)) & ((1L << (INT - 6)) | (1L << (BOOLEAN - 6)) | (1L << (CHAR - 6)) | (1L << (FLOAT - 6)) | (1L << (VOID - 6)) | (1L << (PUBLIC - 6)) | (1L << (PRIVATE - 6)) | (1L << (STATIC - 6)) | (1L << (CustomType - 6)))) != 0)) {
				{
				{
				setState(63);
				attributeOrMethod();
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeOrMethodContext extends ParserRuleContext {
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public AttributeOrMethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeOrMethod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).enterAttributeOrMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).exitAttributeOrMethod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof javaVisitor ) return ((javaVisitor<? extends T>)visitor).visitAttributeOrMethod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeOrMethodContext attributeOrMethod() throws RecognitionException {
		AttributeOrMethodContext _localctx = new AttributeOrMethodContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_attributeOrMethod);
		try {
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				attribute();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				method();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Identifyer() { return getToken(javaParser.Identifyer, 0); }
		public TerminalNode SEMICOLON() { return getToken(javaParser.SEMICOLON, 0); }
		public ModifyerContext modifyer() {
			return getRuleContext(ModifyerContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(javaParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).enterAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).exitAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof javaVisitor ) return ((javaVisitor<? extends T>)visitor).visitAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_attribute);
		int _la;
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIVATE) | (1L << STATIC))) != 0)) {
					{
					setState(75);
					modifyer();
					}
				}

				setState(78);
				type();
				setState(79);
				match(Identifyer);
				setState(80);
				match(SEMICOLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIVATE) | (1L << STATIC))) != 0)) {
					{
					setState(82);
					modifyer();
					}
				}

				setState(85);
				type();
				setState(86);
				match(Identifyer);
				setState(87);
				match(ASSIGN);
				setState(88);
				expression(0);
				setState(89);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatmentContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(javaParser.RETURN, 0); }
		public TerminalNode SEMICOLON() { return getToken(javaParser.SEMICOLON, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode WHILE() { return getToken(javaParser.WHILE, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileLoopContext whileLoop() {
			return getRuleContext(WhileLoopContext.class,0);
		}
		public TerminalNode IF() { return getToken(javaParser.IF, 0); }
		public StatmentContext statment() {
			return getRuleContext(StatmentContext.class,0);
		}
		public List<ElseIfStatmentContext> elseIfStatment() {
			return getRuleContexts(ElseIfStatmentContext.class);
		}
		public ElseIfStatmentContext elseIfStatment(int i) {
			return getRuleContext(ElseIfStatmentContext.class,i);
		}
		public ElseStatmentContext elseStatment() {
			return getRuleContext(ElseStatmentContext.class,0);
		}
		public AssinageContext assinage() {
			return getRuleContext(AssinageContext.class,0);
		}
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public TerminalNode Identifyer() { return getToken(javaParser.Identifyer, 0); }
		public UnaryOperatorContext unaryOperator() {
			return getRuleContext(UnaryOperatorContext.class,0);
		}
		public StatmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).enterStatment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof javaListener ) ((javaListener)listener).exitStatment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof javaVisitor ) return ((javaVisitor<? extends T>)visitor).visitStatment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatmentContext statment() throws RecognitionException {
		StatmentContext _localctx = new StatmentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_statment);
		int _la;
		try {
			int _alt;
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				match(RETURN);
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((((_la - 3)) & ~0x3f) == 0 && ((1L << (_la - 3)) & ((1L << (T__2 - 3)) | (1L << (THIS - 3)) | (1L << (ADD - 3)) | (1L << (SUBSTRACT - 3)) | (1L << (INCREMENT - 3)) | (1L << (DECREMENT - 3)) | (1L << (IntegerLiteral - 3)) | (1L << (CharLiteral - 3)) | (1L << (FloatLiteral - 3)) | (1L << (NullLiteral - 3)) | (1L << (BooleanLiteral - 3)) | (1L << (Identifyer - 3)))) != 0)) {
					{
					setState(94);
					expression(0);
					}
				}
